--- a/login.html
+++ b/login.html
@@ -4,21 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="shortcut icon" href="imagens/favicon/favicon.ico" type="image/x-icon">
+
+    <link rel="stylesheet" href="style.css">
+    
+    <script src="particles-js.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 </head>
 <body>
-    <h2>LOGIN</h2>
-    <form action="." method="post">
-        <label for="username">Usuário:</label>
-        <input type="text" id="username" name="username" required>
-        <br>
-        <br>
-        <label for="password">Senha:</label>
-        <input type="password" id="password" name="password" required>
-        <br>
-        <br>
-        <button type="submit">Entrar</button>
-    </form>
-    <br>
-    <a href=".">Esqueceu sua senha?</a>
+    <main class="principal">
+        <div class="imagem-fundo"></div>
+        <section class="login-section">
+            <div id="particles-js"></div>
+            <div class="logo">
+                <img src="imagens/page-icon.svg" alt="logo do sistema">
+            </div>
+            <div class="login-box">
+                <h2 class="titulo-login">Faça seu login</h2>
+                <form action="" method="post" class="formulario">
+                    <label for="email">Usuário:</label>
+                    <input type="email" id="email" name="email" required>
+
+                    <label for="password">Senha:</label>
+                    <input type="password" id="password" name="password" required>
+
+                    <button type="submit">Entrar</button>
+                </form>
+
+                <a href="." class="a-login" tabindex="0">Esqueceu sua senha?</a>
+
+                <p class="p-login">Ainda não possui uma conta? <a href="cadastro.html"  tabindex="0">Crie agora.</a></p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
