Alterações título da página e fontes

--- a/login.html
+++ b/login.html
@@ -16,17 +16,17 @@
         <div class="imagem-fundo"></div>
         <section class="login-section">
             <div id="particles-js"></div>
-            <div class="logo">
-                <img src="imagens/page-icon.svg" alt="logo do sistema">
+            <div class="nome-sistema">
+                <h1>Hos<span>pet</span>agem</h1>
             </div>
             <div class="login-box">
                 <h2 class="titulo-login">Faça seu login</h2>
                 <form action="" method="post" class="formulario">
-                    <label for="email">Usuário:</label>
-                    <input type="email" id="email" name="email" required>
+                    <label for="email">Seu email:</label>
+                    <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required>
 
-                    <label for="password">Senha:</label>
-                    <input type="password" id="password" name="password" required>
+                    <label for="password">Sua senha:</label>
+                    <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
 
                     <button type="submit">Entrar</button>
                 </form>
