--- a/login.html
+++ b/login.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="shortcut icon" href="imagens/favicon/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/imagens/favicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/login-cad.css">
     
-    <script src="particles-js.js" defer></script>
+    <script src="assets/js/particles-js.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 </head>
 <body>
     <main class="principal">
         <div class="imagem-fundo"></div>
-        <section class="login-section">
+        <section class="login-cad-section">
             <div id="particles-js"></div>
             <div class="nome-sistema">
                 <h1>Hos<span>pet</span>agem</h1>
             </div>
-            <div class="login-box">
-                <h2 class="titulo-login">Faça seu login</h2>
+            <div class="login-cad-box">
+                <h2 class="titulo-login-cad">Faça seu login</h2>
                 <form action="" method="post" class="formulario">
                     <label for="email">Seu email:</label>
                     <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required>
@@ -31,9 +32,9 @@
                     <button type="submit">Entrar</button>
                 </form>
 
-                <a href="." class="a-login" tabindex="0">Esqueceu sua senha?</a>
+                <a href="." class="a-login-cad" tabindex="0">Esqueceu sua senha?</a>
 
-                <p class="p-login">Ainda não possui uma conta? <a href="cadastro.html"  tabindex="0">Crie agora.</a></p>
+                <p class="p-login-cad">Ainda não possui uma conta? <a href="cadastro.html" tabindex="0">Crie agora.</a></p>
             </div>
         </section>
     </main>
