--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <div class="nome-sistema">
                 <h1>Hos<span>pet</span>agem</h1>
             </div>
-            <button class="perfil">Entrar</button>
+            <button class="perfil">
+                <a href="login.html">Entrar</a>
+            </button>
         </section>
 
         <section>
