--- a/sobrenos.html
+++ b/sobrenos.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nós</title>
     <link rel="stylesheet" href="assets/css/sobrenos.css">
+
+
+    <script src="https://kit.fontawesome.com/e8db2f40d0.js" crossorigin="anonymous" defer></script>
 </head>
 <body>
     <header class="header-sobrenos">
@@ -58,5 +61,6 @@
             <p>Seu feedback é muito importante para nós! Agradecemos por compartilhar suas experiências e sugestões para que possamos melhorar continuamente nossos serviços e atender cada vez melhor você e seu pet.</p>
         </section>
     </main>
+
 </body>
 </html>
