--- a/login.html
+++ b/login.html
@@ -18,7 +18,9 @@
         <section class="login-cad-section">
             <div id="particles-js"></div>
             <div class="nome-sistema">
-                <h1>Hos<span>pet</span>agem</h1>
+                <a href="index.html">
+                    <h1>Hos<span>pet</span>agem</h1>
+                </a>
             </div>
             <div class="login-cad-box">
                 <h2 class="titulo-login-cad">Faça seu login</h2>
