Atualização Sobre Nós - Responsividade

--- a/informacao_local.html
+++ b/informacao_local.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="assets/css/base.css">
-    <link rel="stylesheet" href="assets/css/global.css">
-    <link rel="stylesheet" href="assets/css/planos_preços.css">
+    <title>Informações do Local</title>
 
+    <link rel="shortcut icon" href="assets/imagens/favicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/base.css">
 
     <script src="https://kit.fontawesome.com/e8db2f40d0.js" crossorigin="anonymous" defer></script>
     <script src="assets/js/menu_index.js" defer></script>
+    <script src="assets/js/avaliacao_paw.js" defer></script>
 </head>
 <body>
     <header>
@@ -39,7 +40,7 @@
                     <a href="sobrenos.html" class="link-nav">Sobre Nós</a>
                 </li>
                 <li class="lista-nav">
-                    <a href="#" class="link-nav">Planos e Preços</a>
+                    <a href="planos_precos.html" class="link-nav">Planos e Preços</a>
                 </li>
                 <li class="lista-nav">
                     <a href="#" class="link-nav">FAQ</a>
@@ -64,45 +65,29 @@
                 Filtrar
             </button>
         </section>
-
-        <section class="titulo_planos">
-            <h1>Planos e Preços</h1>
-            <p>Descubra os planos disponíveis para cadastrar a sua hospedagem e alcançar mais clientes!</p>
+        <section>
+            <h2>Creche Canina Feliz</h2>
+            <p>4,90</p>
+            <div class="avaliacao" data-rating="5">
+                <div class="patinhas"></div>
+                <p class="p-texto">59 avaliações</p>
+            </div>
+            <img src="" alt="img1">
+            <img src="" alt="img2">
+            <img src="" alt="img3">
         </section>
-        <div class="conteiner_planos">
-            <section class="plano_basico">
-                <h3>Plano Básico</h3>
-                <ul>
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Cadastro de até 5 pets</li>
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Perfil básico da hospedagem</li>
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Acesso a comentários e avaliações</li>
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Suporte ao cliente via email</li>
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Comissão: 10% sobre cada reserva realizada</li>
-                </ul>
-                <p>R$ XX,XX<span>/mês</span></p>
-            </section>
-            <section class="plano_avancado">
-                <h3>Plano Avançado</h3>
-                <ul>
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Cadastro de até 15 pets</li>
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Perfil detalhado da hospedagem com fotos e descrição</li>
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Respostas a comentários e avaliações </li> 
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Suporte prioritário ao cliente</li>
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Comissão: 8% sobre cada reserva realizada</li>
-                </ul>
-                <p>R$ XX,XX<span>/mês</span></p>
-            </section>
-        </div>
-        <section class="plano_premium">
-            <h3>Plano Premium</h3>
-            <ul>
-                <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Cadastro ilimitado de pets  </li>
-                <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Perfil completo com vídeos e fotos</li>
-                <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Promoção em destaque na página principal</li>
-                <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Suporte VIP ao cliente </li>
-                <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Comissão: 5% sobre cada reserva realizada</li>
-            </ul>
-            <p>R$ XX,XX<span>/mês</span></p>
+        <section>
+            <p class="p-principal">A Creche Canina Feliz oferece um ambiente seguro e divertido para o seu animal.Com profissionais dedicados e diversas atividades, garantimos que seu pet se sinta amado e acolhido.</p>
+            <h3>Aqui seus pets podem desfrutar de:</h3>
+            <div class="beneficios">
+                <i></i><p>Área de brincadeiras</p>
+                <i class="fa-solid fa-water-ladder"></i><p>Piscina para Cães</p>
+                <i></i><p>Cuidados Personalizados</p>
+                <i class="fa-solid fa-truck"></i><p>Serviço de Transporte</p>
+                <i></i><p>Área de Descanso</p>
+                <i></i><p>Banho e tosa</p>
+            </div>
+            <button></button>
         </section>
     </main>
 
