--- a/como_funciona.html
+++ b/como_funciona.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como Funciona</title>
     <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/base.css">
     <link rel="stylesheet" href="assets/css/index.css">
 
     <script src="https://kit.fontawesome.com/e8db2f40d0.js" crossorigin="anonymous" defer></script>
@@ -34,7 +35,10 @@
                     <a href="como_funciona.html" class="link-nav">Como Funciona</a>
                 </li>
                 <li class="lista-nav">
-                    <a href="#" class="link-nav">Planos e Preços</a>
+                    <a href="sobrenos.html" class="menu-hide link-nav entrar">Sobre Nós</a>
+                </li>
+                <li class="lista-nav">
+                    <a href="planos_precos.html" class="link-nav">Planos e Preços</a>
                 </li>
                 <li class="lista-nav">
                     <a href="#" class="link-nav">FAQ</a>
