Atualização sobre nós - responsividade

--- a/planos_precos.html
+++ b/planos_precos.html
@@ -39,7 +39,7 @@
                     <a href="sobrenos.html" class="link-nav">Sobre Nós</a>
                 </li>
                 <li class="lista-nav">
-                    <a href="#" class="link-nav">Planos e Preços</a>
+                    <a href="planos_precos.html" class="link-nav">Planos e Preços</a>
                 </li>
                 <li class="lista-nav">
                     <a href="#" class="link-nav">FAQ</a>
