--- a/informacao_local.html
+++ b/informacao_local.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Informações do Local</title>
 
     <link rel="shortcut icon" href="assets/imagens/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/base.css">
-    <link rel="stylesheet" href="assets/css/index.css">
-    
+
     <script src="https://kit.fontawesome.com/e8db2f40d0.js" crossorigin="anonymous" defer></script>
     <script src="assets/js/menu_index.js" defer></script>
     <script src="assets/js/avaliacao_paw.js" defer></script>
@@ -38,7 +37,7 @@
                     <a href="como_funciona.html" class="link-nav">Como Funciona</a>
                 </li>
                 <li class="lista-nav">
-                    <a href="sobrenos.html" class="menu-hide link-nav entrar">Sobre Nós</a>
+                    <a href="sobrenos.html" class="link-nav">Sobre Nós</a>
                 </li>
                 <li class="lista-nav">
                     <a href="planos_precos.html" class="link-nav">Planos e Preços</a>
@@ -66,62 +65,30 @@
                 Filtrar
             </button>
         </section>
-        <section class="section-icon-text">
-            <div class="icon-text-info">
-                <img src="assets/imagens/icon-info1.svg" alt="ícone cachorro tendo ideia">
-                <p>Busque entre diversas opções de hospedagem e garanta a melhor experiência.</p>
-            </div class="section-icon-text">
-            <div class="icon-text-info">
-                <img src="assets/imagens/icon-info2.svg" alt="ícone cachorro com corações">
-                <p>Seu pet merece um lugar onde o amor está sempre presente. Acolhimento é nossa prioridade!</p>
-            </div class="section-icon-text">
-            <div class="icon-text-info">
-                <img src="assets/imagens/icon-info3.svg" alt="ícone cachorro para feedback">
-                <p>Nossos hóspedes sempre saem com um sorriso. Confira o que os outros dizem!</p>
+        <section>
+            <h2>Creche Canina Feliz</h2>
+            <p>4,90</p>
+            <div class="avaliacao" data-rating="5">
+                <div class="patinhas"></div>
+                <p class="p-texto">59 avaliações</p>
             </div>
+            <img src="" alt="img1">
+            <img src="" alt="img2">
+            <img src="" alt="img3">
         </section>
-        <section class="section-hoteis">
-            <h2 class="h2-titulo">Destaques Exclusivos para o seu Pet</h2>
-            <section class="section-infos-hoteis">
-                <div class="infos-hoteis">
-                    <img src="assets/imagens/hotel1.svg" alt="Hotel PetVille Hospedagem">
-                    <h3 class="nome-hotel">PetVille Hospedagem</h3>
-                    <div class="avaliacao" data-rating="5">
-                        <p class="p-texto">Avaliação</p>
-                        <div class="patinhas"></div>
-                    </div>
-                    <p class="valor">R$ XX,XX dia</p>
-                </div>
-                <div class="infos-hoteis">
-                    <img src="assets/imagens/hotel2.svg" alt="Hotel Refúgio dos Peludos">
-                    <h3 class="nome-hotel">Refúgio dos Peludos</h3>
-                    <div class="avaliacao" data-rating="4">
-                        <p class="p-texto">Avaliação</p>
-                        <div class="patinhas"></div>
-                    </div>
-                    <p class="valor">R$ XX,XX dia</p>
-                </div>
-                <div class="infos-hoteis">
-                    <img src="assets/imagens/hotel3.svg" alt="Bicharada Hotel">
-                    <h3 class="nome-hotel">Bicharada Hotel</h3>
-                    <div class="avaliacao" data-rating="4">
-                        <p class="p-texto">Avaliação</p>
-                        <div class="patinhas"></div>
-                    </div>
-                    <p class="valor">R$ XX,XX dia</p>
-                </div>
-            </section>
-            <a href="">
-                Ver mais hospetagens
-                <i class="fa-solid fa-arrow-right"></i>
-            </a>
+        <section>
+            <p class="p-principal">A Creche Canina Feliz oferece um ambiente seguro e divertido para o seu animal.Com profissionais dedicados e diversas atividades, garantimos que seu pet se sinta amado e acolhido.</p>
+            <h3>Aqui seus pets podem desfrutar de:</h3>
+            <div class="beneficios">
+                <i></i><p>Área de brincadeiras</p>
+                <i class="fa-solid fa-water-ladder"></i><p>Piscina para Cães</p>
+                <i></i><p>Cuidados Personalizados</p>
+                <i class="fa-solid fa-truck"></i><p>Serviço de Transporte</p>
+                <i></i><p>Área de Descanso</p>
+                <i></i><p>Banho e tosa</p>
+            </div>
+            <button></button>
         </section>
-        <section class="section-teste">
-            <h2 class="h2-titulo">Descubra o Hotel Ideal para Seu Pet!</h2>
-            <p class="p-texto">Cada animal é único e merece o melhor! Responda ao nosso teste interativo e descubra em poucos minutos o hotel ideal que atende às necessidades e à personalidade do seu pet.</p>
-            <button class="btn-teste">Comece o teste!</button>
-        </section>
-        <section class="elemento"></section>
     </main>
 
     <footer class="footer">
