--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a href="como_funciona.html" class="link-nav">Como Funciona</a>
                 </li>
                 <li class="lista-nav">
-                    <a href="sobrenos.html" class="menu-hide link-nav entrar">Sobre Nós</a>
+                    <a href="sobrenos.html" class="link-nav entrar">Sobre Nós</a>
                 </li>
                 <li class="lista-nav">
                     <a href="planos_precos.html" class="link-nav">Planos e Preços</a>
