Revert "Tela informações do hotel (#1)"
This reverts commit a0d8bc6c89d5312a0b69b6930b883825e440b050.

--- a/informacao_local.html
+++ b/informacao_local.html
@@ -8,12 +8,10 @@
     <link rel="shortcut icon" href="assets/imagens/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/base.css">
-    <link rel="stylesheet" href="assets/css/info-local.css">
 
     <script src="https://kit.fontawesome.com/e8db2f40d0.js" crossorigin="anonymous" defer></script>
     <script src="assets/js/menu_index.js" defer></script>
     <script src="assets/js/avaliacao_paw.js" defer></script>
-    <script src="assets/js/info-local.js" defer></script>
 </head>
 <body>
     <header>
@@ -67,138 +65,30 @@
                 Filtrar
             </button>
         </section>
-        <section class="section-info-hotel">
-            <h2 class="nome-hotel">Creche Canina Feliz</h2>
-            <p class="p-texto">4,90</p>
+        <section>
+            <h2>Creche Canina Feliz</h2>
+            <p>4,90</p>
             <div class="avaliacao" data-rating="5">
                 <div class="patinhas"></div>
                 <p class="p-texto">59 avaliações</p>
             </div>
-            <div class="div-carrosel">
-                <div class="carrosel-inner">
-                    <img src="assets/imagens/img-informacoes1.svg" alt="" class="carrosel-item ativo">
-                    <img src="assets/imagens/img-informacoes2.svg" alt="" class="carrosel-item">
-                    <img src="assets/imagens/img-informacoes3.svg" alt="" class="carrosel-item">
-                </div>
-            </div>
-            <div class="div-carrosel-indicadores">
-                <span class="ponto ativo"></span>
-                <span class="ponto"></span>
-                <span class="ponto"></span>
-            </div>
+            <img src="" alt="img1">
+            <img src="" alt="img2">
+            <img src="" alt="img3">
         </section>
         <section>
-            <p class="p-principal">A Creche Canina Feliz oferece um ambiente seguro e divertido para o seu animal. Com profissionais dedicados e diversas atividades, garantimos que seu pet se sinta amado e acolhido.</p>
-            <h3 class="titulo-secoes">Aqui seus pets podem desfrutar de:</h3>
-            <div class="lista-beneficios">
-                <div class="beneficios" id="teste">
-                    <img src="assets/imagens/icons/brincadeira-icon.svg">
-                    <p class="p-texto">Área de brincadeiras</p>
-                </div>
-                <div class="beneficios">
-                    <img src="assets/imagens/icons/piscina-icon.svg">
-                    <p class="p-texto">Piscina para Cães</p>
-                </div>
-                <div class="beneficios">
-                    <img src="assets/imagens/icons/cuidados-icon.svg">
-                    <p class="p-texto">Cuidados Personalizados</p>
-                </div>
-                <div class="beneficios">
-                    <img src="assets/imagens/icons/transporte-icon.svg">
-                    <p class="p-texto">Serviço de Transporte</p>
-                </div>
-                <div class="beneficios">
-                    <img src="assets/imagens/icons/descanso-icon.svg">
-                    <p class="p-texto">Área de Descanso</p>
-                </div>
-                <div class="beneficios">
-                    <img src="assets/imagens/icons/banho-tosa-icon.svg">
-                    <p class="p-texto">Banho e tosa</p>
-                </div>
+            <p class="p-principal">A Creche Canina Feliz oferece um ambiente seguro e divertido para o seu animal.Com profissionais dedicados e diversas atividades, garantimos que seu pet se sinta amado e acolhido.</p>
+            <h3>Aqui seus pets podem desfrutar de:</h3>
+            <div class="beneficios">
+                <i></i><p>Área de brincadeiras</p>
+                <i class="fa-solid fa-water-ladder"></i><p>Piscina para Cães</p>
+                <i></i><p>Cuidados Personalizados</p>
+                <i class="fa-solid fa-truck"></i><p>Serviço de Transporte</p>
+                <i></i><p>Área de Descanso</p>
+                <i></i><p>Banho e tosa</p>
             </div>
-            <button class="outros-servicos">+ Atividades e Serviços</button>
+            <button></button>
         </section>
-        <section class="section-feedback">
-            <div class="div-avaliacao">
-                <h2>Avaliação</h2>
-                <div class="estrelas">
-                    <div class="barra">
-                        <div class="preenchido" style="width: 70%;"></div>
-                    </div>
-                    <span>5.0</span>
-                </div>
-                <div class="estrelas">
-                    <div class="barra">
-                        <div class="preenchido" style="width: 50%;"></div>
-                    </div>
-                    <span>4.0</span>
-                </div>
-                <div class="estrelas">
-                    <div class="barra">
-                        <div class="preenchido" style="width: 40%;"></div>
-                    </div>
-                    <span>3.0</span>
-                </div>
-                <div class="estrelas">
-                    <div class="barra">
-                        <div class="preenchido" style="width: 20%;"></div>
-                    </div>
-                    <span>2.0</span>
-                </div>
-                <div class="estrelas">
-                    <div class="barra">
-                        <div class="preenchido" style="width: 10%;"></div>
-                    </div>
-                    <span>1.0</span>
-                </div>
-                <button>+ avaliações</button>
-            </div>
-            <div class="div-feedback">
-                <div class="feedback avaliacao" data-rating="5">
-                    <div class="feedback-titulo">
-                        <p>Maria S.</p>
-                        <div class="patinhas"></div>
-                    </div>
-                    <p>"Meu cachorro voltou para casa tão feliz! Ele adorou as brincadeiras na piscina e fez novos amigos. Recomendo a todos!"</p>
-                </div>
-                <div class="feedback avaliacao" data-rating="5">
-                    <div class="feedback-titulo">
-                        <p>Ana L.</p>
-                        <div class="patinhas"></div>
-                    </div>
-                    <p>"Estou muito satisfeita! A equipe é super profissional e carinhosa. Meu cachorro sempre parece feliz quando o busco."</p>
-                </div>
-                <div class="feedback avaliacao" data-rating="4">
-                    <div class="feedback-titulo">
-                        <p>Roberto G.</p>
-                        <div class="patinhas"></div>
-                    </div>
-                    <p>"Ótimo lugar! Meu cão adorou a socialização com outros pets. Apenas um detalhe: o transporte poderia ser um pouco mais pontual."</p>
-                </div>
-                <div class="feedback avaliacao" data-rating="4">
-                    <div class="feedback-titulo">
-                        <p>João P.</p>
-                        <div class="patinhas"></div>
-                    </div>
-                    <p>"A creche é excelente! O atendimento foi muito atencioso e meu cão ficou bem cuidado. Só gostaria que houvesse mais atividades ao ar livre."</p>
-                </div>
-                <div class="feedback avaliacao" data-rating="3">
-                    <div class="feedback-titulo">
-                        <p>Carlos M.</p>
-                        <div class="patinhas"></div>
-                    </div>
-                    <p>"A creche é boa, mas poderia ter mais opções de alimentação para cães. Meu pet adora variar e ficou um pouco chateado."</p>
-                </div>
-            </div>
-        </section>
-        <section class="mapa">
-            <h3 class="titulo-secoes">Nossa Localização:</h3>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3821.7301876446795!2d-49.25493042494304!3d-16.690379845655144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935ef1077239954f%3A0x40ee78e11fd2a527!2sFACINPRO%20-%20Faculdade%20INPRO%20-%20Gradua%C3%A7%C3%A3o%2C%20P%C3%B3s-Gradua%C3%A7%C3%A3o%20e%20MBA!5e0!3m2!1spt-BR!2sbr!4v1729574271937!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </section>
-        <div class="collapse">
-            <i class="fa-solid fa-angle-left fa-2x"></i>
-            <a>Chat com a Creche Canina</a>
-        </div>
     </main>
 
     <footer class="footer">
