Correções no menu das páginas

--- a/sobrenos.html
+++ b/sobrenos.html
@@ -30,22 +30,22 @@
                     <a href="login.html" class="menu-hide link-nav entrar">Entrar</a>
                 </li>
                 <li class="lista-nav">
-                    <a href="index.html" class="menu-hide link-nav entrar">Início</a>
+                    <a href="index.html" class="link-nav entrar">Início</a>
                 </li>
                 <li class="lista-nav">
-                    <a href="como_funciona.html" class="menu-hide link-nav entrar">Como Funciona</a>
+                    <a href="como_funciona.html" class="link-nav entrar">Como Funciona</a>
                 </li>
                 <li class="lista-nav">
-                    <a href="sobrenos.html" class="menu-hide link-nav entrar">Sobre Nós</a>
+                    <a href="sobrenos.html" class="link-nav entrar">Sobre Nós</a>
                 </li>
                 <li class="lista-nav">
-                    <a href="planos_precos.html" class="menu-hide link-nav entrar">Planos e Preços</a>
+                    <a href="planos_precos.html" class="link-nav entrar">Planos e Preços</a>
                 </li>
                 <li class="lista-nav">
-                    <a href="#" class="menu-hide link-nav entrar">FAQ</a>
+                    <a href="#" class="link-nav entrar">FAQ</a>
                 </li>
                 <li class="lista-nav">
-                    <a href="#" class="menu-hide link-nav entrar">Faça o teste</a>
+                    <a href="teste_interativo.html" class="menu-hide link-nav entrar">Faça o teste</a>
                 </li>
             </nav>
         </section>
