--- a/teste_interativo.html
+++ b/teste_interativo.html
@@ -40,13 +40,13 @@
                     <a href="sobrenos.html" class="link-nav">Sobre Nós</a>
                 </li>
                 <li class="lista-nav">
-                    <a href="#" class="link-nav">Planos e Preços</a>
+                    <a href="planos_precos.html" class="link-nav">Planos e Preços</a>
                 </li>
                 <li class="lista-nav">
                     <a href="#" class="link-nav">FAQ</a>
                 </li>
                 <li class="lista-nav">
-                    <a href="#" class="menu-hide link-nav entrar">Faça o teste</a>
+                    <a href="teste_interativo.html" class="menu-hide link-nav entrar">Faça o teste</a>
                 </li>
             </nav>
         </section>
