--- a/como_funciona.html
+++ b/como_funciona.html
@@ -35,7 +35,7 @@
                     <a href="como_funciona.html" class="link-nav">Como Funciona</a>
                 </li>
                 <li class="lista-nav">
-                    <a href="sobrenos.html" class="menu-hide link-nav entrar">Sobre Nós</a>
+                    <a href="sobrenos.html" class="link-nav entrar">Sobre Nós</a>
                 </li>
                 <li class="lista-nav">
                     <a href="planos_precos.html" class="link-nav">Planos e Preços</a>
@@ -44,7 +44,7 @@
                     <a href="#" class="link-nav">FAQ</a>
                 </li>
                 <li class="lista-nav">
-                    <a href="#" class="menu-hide link-nav entrar">Faça o teste</a>
+                    <a href="teste_interativo.html" class="menu-hide link-nav entrar">Faça o teste</a>
                 </li>
             </nav>
         </section>
