--- a/planos_precos.html
+++ b/planos_precos.html
@@ -45,7 +45,7 @@
                     <a href="#" class="link-nav">FAQ</a>
                 </li>
                 <li class="lista-nav">
-                    <a href="#" class="menu-hide link-nav entrar">Faça o teste</a>
+                    <a href="teste_interativo.html" class="menu-hide link-nav entrar">Faça o teste</a>
                 </li>
             </nav>
         </section>
